--- a/site/app/templates/layout.html
+++ b/site/app/templates/layout.html
@@ -22,6 +22,7 @@
         <![endif]-->
         <link href="//fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
         <link href="//fonts.googleapis.com/css?family=Roboto+Condensed:400,700,300" rel="stylesheet">
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
         <link href="//cdn.jsdelivr.net/jquery.slick/1.3.15/slick.css" rel="stylesheet">
     {%- assets "css_all" %}
         <link href="{{ ASSET_URL }}" rel="stylesheet">
