--- a/site/app/static/css/style.css
+++ b/site/app/static/css/style.css
@@ -79,8 +79,8 @@ ul {
 /* global css end */
 
 /* jquery slick start */
-.slick-list {
-   //overflow: visible;
+.slick-list, .slick-track {
+   overflow: hidden;
 }
 
 .slick-prev {
@@ -100,45 +100,47 @@ ul {
     color: grey;
 }
 
-.slick-dots {
-   bottom: auto;
-}
-
 .slick-dots li button:before {
-    color: grey;
-    opacity: 0.3;
+    color: white;
+    //opacity: 0.3;
+    font-size: 20px;
 }
 
 .slick-dots li.slick-active button:before {
-    color: grey;
-    opacity: 0.7;
+    color: white;
+    //opacity: 0.7;
+    font-size: 20px;
 }
 /* jquery slick end */
 
 
+.main-carousel,
+.main-carousel .slick-list,
+.main-carousel .slick-track,
+.main-slide .vjs-tech,
+.main-slide .vjs-poster,
+.main-slide-bg {
+    height: inherit;
+    width: inherit;
+}
 
-.main-slide-wrapper {
-    width: 100%;
-    height: 100%;
-    position: relative;
-
+.main-carousel .slick-dots {
+    bottom: 8%;
+    left: 8%;
+    text-align: left;
+    width: 50%;
 }
 
 .video-control {
     color: #bdc3c7;
     position: absolute;
-    right: 150px;
-    bottom: 100px;
+    right: 10%;
+    bottom: 10%;
 }
 
 .placeholder {
     height: 200px;
 }
-
-
-
-
-
 
 
 
