--- a/site/app/templates/home.html
+++ b/site/app/templates/home.html
@@ -1,21 +1,29 @@
 {% extends "layout.html" %}
 
 {%- block content %}
+        <div class="main-carousel">
         {%- for slide in c_page.main_carousel %}
-        <div class="main-slide-wrapper"
-            data-type="{{ slide.background.type }}"
-            data-image="{{ slide.background.media.image }}"
-        {%- if slide.background.type == 'video' %}
-            data-video-mp4="{{ slide.background.media.mp4 }}"
-            data-video-webm="{{ slide.background.media.webm }}"
-            data-video-ogg="{{ slide.background.media.ogg }}"
-        {%- endif -%}>
+            <div class="main-slide" data-bg-type="{{ slide.background.type }}">
+                <div class="bg-wrap">
+                {%- if slide.background.type == 'video' %}
+                    <video class="video-js vjs-default-skin"
+                    loop muted preload="auto" width="auto" height="auto"
+                    poster="{{ url_for('static', filename=slide.background.media.image) }}"
+                    data-setup='{}'>
+                    <source src="{{ url_for('static', filename=slide.background.media.mp4) }}" type="video/mp4">
+                    <source src="{{ url_for('static', filename=slide.background.media.webm) }}" type="video/webm">
+                    <source src="{{ url_for('static', filename=slide.background.media.ogv) }}" type="video/ogg">
+                    <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
+                    </video>
+                    <i class="fa fa-2x video-control"></i>
+                {%- else -%}
+                    <img class="main-slide-bg" src="{{ url_for('static', filename=slide.background.media.image) }}" alt="">
+                {%- endif -%}
+                </div>
+            </div>
+        {% endfor %}
         </div>
-
         <div class="placeholder">
         </div>
-
-        {% endfor %}
-
 
 {%- endblock content %}
