--- a/site/app/templates/layout.html
+++ b/site/app/templates/layout.html
@@ -24,6 +24,7 @@
         <link href="//fonts.googleapis.com/css?family=Roboto+Condensed:400,700,300" rel="stylesheet">
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
         <link href="//cdn.jsdelivr.net/jquery.slick/1.3.15/slick.css" rel="stylesheet">
+        <link href="//vjs.zencdn.net/4.11/video-js.css" rel="stylesheet">
     {%- assets "css_all" %}
         <link href="{{ ASSET_URL }}" rel="stylesheet">
     {%- endassets %}
