--- a/site/app/templates/home.html
+++ b/site/app/templates/home.html
@@ -4,7 +4,18 @@
         <div class="main-carousel">
         {%- for slide in c_page.main_carousel %}
             <div class="main-slide" data-bg-type="{{ slide.background.type }}">
-                <div class="bg-wrap">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2 main-slide-cont">
+                            <div>
+                                <div class="main-slide-title">{{ slide.title }}</div>
+                                <div class="main-slide-desc">{{ slide.text }}</div>
+                                <a class="btn btn-lg btn-primary main-slide-action" href="{{ slide.action.url }}">{{ slide.action.text.replace(' ', '&nbsp;')|safe }}</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-wr">
                 {%- if slide.background.type == 'video' %}
                     <video class="video-js vjs-default-skin"
                     loop muted preload="auto" width="auto" height="auto"
@@ -15,7 +26,7 @@
                     <source src="{{ url_for('static', filename=slide.background.media.ogv) }}" type="video/ogg">
                     <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
                     </video>
-                    <i class="fa fa-2x video-control"></i>
+                    <i class="fa video-control"></i>
                 {%- else -%}
                     <img class="main-slide-bg" src="{{ url_for('static', filename=slide.background.media.image) }}" alt="">
                 {%- endif -%}
