--- a/site/app/templates/home.html
+++ b/site/app/templates/home.html
@@ -31,6 +31,7 @@
                     <img class="main-slide-bg" src="{{ url_for('static', filename=slide.background.media.image) }}" alt="">
                 {%- endif -%}
                 </div>
+                <div class="main-slide-tint"></div>
             </div>
         {% endfor %}
         </div>
