--- a/site/app/templates/layout.html
+++ b/site/app/templates/layout.html
@@ -41,7 +41,28 @@
     {%- block body -%}
 
     {%- block header %}
-        <nav>
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#header-navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="{{ c_global.header.logo.url }}">
+                        <img alt="{{ c_global.header.logo.desc }}" src="{{ url_for('static', filename=c_global.header.logo.file) }}">
+                        <span class="sr-only">{{ c_global.header.logo.desc }}</span>
+                    </a>
+                </div>
+                <div class="collapse navbar-collapse" id="header-navbar-collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        {%- for item in c_global.header.menu %}
+                        <li><a href="{{ item.url }}">{{ item.text.replace(' ', '&nbsp;')|safe }}</a></li>
+                        {%- endfor %}
+                    </ul>
+                </div>
+            </div>
         </nav>
     {%- endblock header %}
 
