--- a/site/app/static/css/style.css
+++ b/site/app/static/css/style.css
@@ -6,8 +6,14 @@ html, body {
 
 body {
     background-color: gray;
+    color: pink;
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
+    padding-top: 60px;
+}
+
+body.home {
+    padding-top: 0;
 }
 
 /* h1, h2, h3, h4, h5, h6, p { */
@@ -123,7 +129,7 @@ ul .slick-dots {
 }
 
 .main-slide-tint {
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.5);
     position: absolute;
     top: 0;
     left: 0;
@@ -182,7 +188,7 @@ ul .slick-dots {
     font-weight: 900;
     font-size: 250%;
     color: white;
-    text-shadow: 1px 1px 0px rgba(150, 150, 150, 0.5);
+/*     text-shadow: 1px 1px 0px rgba(150, 150, 150, 0.5); */
 }
 
 .main-slide-desc {
@@ -191,7 +197,7 @@ ul .slick-dots {
     color: white;
     margin-top: 20px;
     margin-bottom: 40px;
-    text-shadow: 1px 1px 0px rgba(150, 150, 150, 0.5);
+/*     text-shadow: 1px 1px 0px rgba(150, 150, 150, 0.5); */
 }
 
 .main-slide-action {
@@ -206,19 +212,19 @@ ul .slick-dots {
     padding: 0;
     padding-left: 15px;
     width: auto;
-    height: 50px;
-    margin-top: 15px;
-    margin-bottom: 15px;
+    height: auto;
 }
 
 .navbar-brand img {
     width: auto;
-    height: 50px;
+    height: 30px;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 .navbar-toggle {
-    margin-top: 23px;
-    margin-bottom: 23px;
+    margin-top: 14px;
+    margin-bottom: 14px;
 }
 
 .navbar-inverse {
@@ -229,55 +235,108 @@ ul .slick-dots {
     border: none;
 }
 
-.nav li a {
-    margin-top: 20px;
+.navbar-inverse .navbar-nav > li > a {
     font-family: 'Roboto Condensed', sans-serif;
-    font-size: 180%;
+    font-size: 130%;
     font-weight: 700;
-    color: #BDC3C7;
-    text-shadow: 1px 1px 0px rgba(150, 150, 150, 0.5);
+    color: white;
+    text-align: center;
+/*     text-shadow: 1px 1px 0px rgba(150, 150, 150, 0.5); */
 }
 
-.navbar-nav > li > a:visited {
-    color: #ecf0f1;
-}
-
-.navbar-nav > li > a:hover,
-.navbar-nav > li > a:active,
-.navbar-nav > li > a.current {
+.navbar-inverse .navbar-nav > li > a:visited {
     color: white;
 }
 
-.navbar-nav > li > a.current {
+.navbar-inverse .navbar-nav > li > a:hover,
+.navbar-inverse .navbar-nav > li > a:active,
+.navbar-inverse .navbar-nav > li > a.current {
+    color: #95d3fc;
+}
+
+.navbar-inverse .navbar-nav > li > a.current {
     font-weight: 900;
+}
+
+#header-navbar-collapse {
+    background-color: rgba(63, 65, 66, 1);
+}
+
+.navbar-fixed-top {
+    position: absolute;
+}
+
+.navbar {
+    background-color: rgba(63, 65, 66, 1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.home .navbar {
+    background-color: transparent;
+    border-bottom: none;
 }
 /* header end */
 
 
 
-
 /* tablets */
 @media (min-width : 768px) {
-    /* header start */
-    .nav > li > a {
-        //margin-left: 30px;
-        //margin-top: 40px;
-        //text-align: left;
+
+    body {
+        padding-top: 80px;
     }
+
+    .navbar-brand img {
+        transition: height .3s,
+                    margin-top .3s,
+                    margin-bottom .3s;
+        height: 50px;
+    }
+
     .navbar {
-        //margin-bottom: 0;
+        transition: background .3s,
+                    border-bottom .3s;
     }
-    /* header end */
+
+    .home .navbar-fixed-top.scroll-nav-collapse {
+        background-color: rgba(63, 65, 66, 1);
+        border-bottom: 1px solid rgba(255,255,255,.3);
+    }
+
+    .scroll-nav-collapse .navbar-brand img {
+        height: 30px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    .navbar-nav > li > a {
+        transition: background .3s,
+                    margin-top .3s;
+        margin-top: 15px;
+    }
+
+    .scroll-nav-collapse .navbar-nav > li > a {
+        margin-top: 0;
+    }
+
+    #header-navbar-collapse {
+        background-color: transparent;
+    }
+
+    .navbar-fixed-top {
+        position: fixed;
+    }
+
     .main-slide-title {
-        font-size: 350%;
+        font-size: 300%;
     }
-    
+
     .main-slide-desc {
-        font-size: 170%;
+        font-size: 140%;
     }
-    
+
     .main-slide-action {
-        font-size: 150%;
+        font-size: 120%;
     }
 
 }
@@ -285,27 +344,21 @@ ul .slick-dots {
 
 /* medium desktops */
 @media (min-width : 992px) {
+
     /* header start */
-    .navbar {
-        //margin-top: 15px;
-    }
-
-    .nav > li > a {
-        //margin-left: 50px;
-    }
-
     .navbar-inverse .navbar-nav > li > a {
-        font-size: 220%;
+        font-size: 180%;
     }
     /* header end */
+
     .main-slide-title {
         font-size: 500%;
     }
-    
+
     .main-slide-desc {
         font-size: 200%;
     }
-    
+
     .main-slide-action {
         font-size: 180%;
     }
@@ -316,11 +369,6 @@ ul .slick-dots {
 /* large desktops */
 @media (min-width : 1200px) {
 
-    /* header start */
-    .nav > li > a {
-        //margin-left: 70px;
-    }
-    /* header end */
     .main-slide-desc {
         margin-top: 30px;
         margin-bottom: 60px;
